--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -1188,7 +1188,7 @@
   ],
   "presets": [
     {
-      "name": "t:sections.featured-product.presets.name",
+      "name": "Test Task Blick",
       "blocks": [
         {
           "type": "text",
