--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -370,7 +370,7 @@
 
 {% schema %}
 {
-  "name": "Test Task 3",
+  "name": "Test Task Blick Solutions",
   "class": "section section-featured-product",
   "blocks": [
   ],
@@ -406,7 +406,7 @@
 ],
   "presets": [
     {
-      "name": "Test Task 3"
+      "name": "Test Task Blick Solutions"
     }
   ]
 }
