--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -233,6 +233,7 @@
       </div>
       <div class="swiper-button-next"> </div>
       <div class="swiper-button-prev"> </div>
+      <div class="swiper-pagination medium-hide"></div>
     </div>
   </div>
 
