--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -233,7 +233,7 @@
       </div>
       <div class="swiper-button-next"> </div>
       <div class="swiper-button-prev"> </div>
-      <div class="swiper-pagination medium-hide"></div>
+      <div class="swiper-pagination"></div>
     </div>
   </div>
 
@@ -295,6 +295,14 @@
       navigation: {
         nextEl: ".swiper-button-next",
         prevEl: ".swiper-button-prev"
+      },
+      breakpoints: {
+        640: {
+          pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+          }
+        }
       },
       thumbs: {
         swiper: swiper
