--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -290,17 +290,20 @@
     });
     var swiper2 = new Swiper(".mySwiper2", {
       spaceBetween: 10,
-      pagination: {
-            el: ".swiper-pagination",
-            clickable: true,
-          },
       loop: true,
       slidesPerView: 1,
       navigation: {
         nextEl: ".swiper-button-next",
         prevEl: ".swiper-button-prev"
       },
-     
+      breakpoints: {
+        640: {
+          pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+          }
+        }
+      },
       thumbs: {
         swiper: swiper
       }
