--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -300,7 +300,7 @@
         640: {
           pagination: {
             el: ".swiper-pagination",
-            clickable: true,
+            clickable: true
           }
         }
       },
