--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -231,9 +231,9 @@
           </div>
         {% endfor %}
       </div>
-      <div class="swiper-button-next"> </div>
-      <div class="swiper-button-prev"> </div>
-      <div class="swiper-pagination"></div>
+      <div class="swiper-button-next small-hide"> </div>
+      <div class="swiper-button-prev small-hide"> </div>
+      <div class="swiper-pagination medium-hide"></div>
     </div>
   </div>
 
@@ -297,12 +297,8 @@
         prevEl: ".swiper-button-prev"
       },
       pagination: {
-        breakpoints: {
-        640: {
-          el: ".swiper-pagination",
+            el: ".swiper-pagination",
             clickable: true
-        }},
-            
       },
       thumbs: {
         swiper: swiper
