--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -231,8 +231,8 @@
           </div>
         {% endfor %}
       </div>
-      <div class="swiper-button-next small-hide"> </div>
-      <div class="swiper-button-prev small-hide"> </div>
+      <div class="swiper-button-next"> </div>
+      <div class="swiper-button-prev"> </div>
       <div class="swiper-pagination medium-hide"></div>
     </div>
   </div>
