--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -231,10 +231,11 @@
           </div>
         {% endfor %}
       </div>
-      <div class="swiper-button-next"> </div>
-      <div class="swiper-button-prev"> </div>
-      <div class="swiper-pagination medium-hide"></div>
+      <div class="swiper-button-next small-hide"> </div>
+      <div class="swiper-button-prev small-hide"> </div>
+      
     </div>
+    <div class="swiper-pagination medium-hide"></div>
   </div>
 
 
