--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -293,10 +293,14 @@
       spaceBetween: 10,
       loop: true,
       slidesPerView: 1,
-      navigation: {
+      breakpoints: {
+        640: {
+          navigation: {
         nextEl: ".swiper-button-next",
         prevEl: ".swiper-button-prev"
-      },
+      }
+        }},
+      
       pagination: {
             el: ".swiper-pagination",
             clickable: true
