--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -33,7 +33,9 @@
       border-radius: 7px;
     }
 
-   
+    .swiper-pagination {
+      bottom: -6px;
+    }
 
     .swiper {
       width: 100%;
