--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -190,7 +190,7 @@
         width: auto;
       }
       .product-information {
-        margin: 0 auto;
+        margin: 20px auto;
       }
       .mySwiper {
         display: none;
