--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -33,7 +33,7 @@
       border-radius: 7px;
     }
 
-    .swiper-pagination {
+    .swiper-pagination, .swiper-pagination-fraction {
       bottom: -6px;
     }
 
