--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -295,6 +295,8 @@
       spaceBetween: 10,
       loop: true,
       slidesPerView: 1,
+      centeredSlides: true,
+      spaceBetween: 30,
       breakpoints: {
         640: {
           navigation: {
