--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -60,7 +60,7 @@
     }
 
     .mySwiper .swiper-slide {
-      width: 90% !important;
+     /* width: 90% !important; */
       height: 100%;
       opacity: 0.4;
     }
