--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -23,6 +23,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      width: 90%;
     }
 
     .swiper-slide img {
@@ -60,7 +61,7 @@
     }
 
     .mySwiper .swiper-slide {
-     /* width: 90% !important; */
+      width: 90% !important;
       height: 100%;
       opacity: 0.4;
     }
