--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -34,10 +34,6 @@
       border-radius: 7px;
     }
 
-    .swiper-pagination, .swiper-pagination-fraction {
-      bottom: -6px;
-    }
-
     .swiper {
       width: 100%;
       height: 300px;
@@ -296,8 +292,8 @@
       spaceBetween: 10,
       loop: true,
       slidesPerView: 1,
-      centeredSlides: true,
-      spaceBetween: 30,
+      centeredSlides: false,
+      spaceBetween: 5,
       breakpoints: {
         640: {
           navigation: {
