--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -11,11 +11,6 @@
       display: flex;
     }
 
-    .swiper {
-      width: 100%;
-      height: 100%;
-    }
-
     .swiper-slide {
       text-align: center;
       font-size: 18px;
@@ -39,6 +34,7 @@
       height: 300px;
       margin-left: auto;
       margin-right: auto;
+      overflow: visible;
     }
 
     .swiper-slide {
