--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -34,7 +34,6 @@
       height: 300px;
       margin-left: auto;
       margin-right: auto;
-      overflow: visible;
     }
 
     .swiper-slide {
@@ -188,9 +187,11 @@
       .mySwiper {
         display: none;
       }
+      .swiper {
+        overflow: visible;
+      }
       .outer-wrapper {
         margin: 0 auto;
-      
       }
     }
   </style>
