--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -187,6 +187,9 @@
       .mySwiper {
         display: none;
       }
+      .section-container {
+        overflow: hidden;
+      }
       .swiper {
         overflow: visible;
       }
