--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -3,7 +3,8 @@
       position: relative;
       height: 100%;
       max-width: 500px;
-      margin: 0 20px 0 auto;
+      /*margin: 0 20px 0 auto;*/
+      margin: 0 auto;
       font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
       font-size: 14px;
       color: #000;
@@ -194,7 +195,7 @@
         overflow: visible;
       }
       .outer-wrapper {
-        margin: 0 auto;
+        margin: 0;
       }
     }
   </style>
