--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -194,6 +194,10 @@
       .swiper {
         overflow: visible;
       }
+      .mySwiper2 {
+        height: 80%;
+        width: 90%;
+      }
       .outer-wrapper {
         margin: 0;
       }
@@ -290,9 +294,9 @@
       watchSlidesProgress: true
     });
     var swiper2 = new Swiper(".mySwiper2", {
-     
       loop: true,
       slidesPerView: 1,
+      watchSlidesProgress: true,
       spaceBetween: 5,
       breakpoints: {
         640: {
