--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -169,6 +169,9 @@
       margin-right: 5px;
     }
     @media only screen and (max-width: 768px) {
+      .swiper-pagination {
+        bottom: -6px;
+      }
       .text-with-icon {
         flex-direction: column;
       }
