--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -170,7 +170,7 @@
     }
     @media only screen and (max-width: 768px) {
       .swiper-pagination {
-        bottom: -6px;
+        bottom: -6px !important;
       }
       .text-with-icon {
         flex-direction: column;
