--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -172,6 +172,9 @@
       .swiper-pagination {
         bottom: -6px !important;
       }
+      .swiper-slide img {
+        margin-bottom: 17px;
+      }
       .text-with-icon {
         flex-direction: column;
       }
