--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -243,7 +243,7 @@
       </div>
       <div class="swiper-button-next small-hide"> </div>
       <div class="swiper-button-prev small-hide"> </div>
-      <div class="swiper-pagination medium-hide"></div>
+      <div class="swiper-pagination medium-large-hide"></div>
     </div>
   </div>
 
