--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -241,8 +241,8 @@
           </div>
         {% endfor %}
       </div>
-      <div class="swiper-button-next small-hide"> </div>
-      <div class="swiper-button-prev small-hide"> </div>
+      <div class="swiper-button-next medium-down-hide"> </div>
+      <div class="swiper-button-prev medium-down-hide"> </div>
       <div class="swiper-pagination medium-large-hide"></div>
     </div>
   </div>
