--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -170,6 +170,7 @@
     }
     @media only screen and (max-width: 989px) {
       .swiper-pagination {
+        position: relative;
         bottom: -6px !important;
       }
       .swiper-slide img {
@@ -243,10 +244,10 @@
       </div>
       <div class="swiper-button-next medium-down-hide"> </div>
       <div class="swiper-button-prev medium-down-hide"> </div>
-      <div class="swiper-pagination medium-large-hide"></div>
+     
     </div>
   </div>
-
+  <div class="swiper-pagination medium-large-hide"></div>
 
   <div class="product-information">
     <div class="info-box">
