--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -175,9 +175,6 @@
       .swiper-slide img {
         margin-bottom: 17px;
       }
-      .text-with-icon {
-        flex-direction: column;
-      }
       .icon-blocks {
         justify-content: center;
         margin: 20px;
@@ -206,6 +203,11 @@
       }
       .outer-wrapper {
         margin: 0;
+      }
+    }
+    @media only screen and (max-width: 660px) {
+      .text-with-icon {
+        flex-direction: column;
       }
     }
   </style>
