--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -305,6 +305,7 @@
       slidesPerView: 1,
       watchSlidesProgress: true,
       spaceBetween: 5,
+      centeredSlides: true,
       breakpoints: {
         989: {
           navigation: {
