--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -168,6 +168,9 @@
       border-radius: 5px;
       margin-right: 5px;
     }
+    .swiper-pagination-bullet-active {
+      background: #949494;
+    }
     @media only screen and (max-width: 989px) {
       .swiper-pagination {
         position: relative; 
