--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -113,7 +113,7 @@
     .info-box {
       box-shadow: 0px 1px 17px 1px #d7d7d7;
       border-radius: 6px;
-      border: 1px solid #f2eeee;
+      border: 1px solid #e4e4e4;
       padding: 0 15px 15px 15px;
       width: 400px;
     }
