--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -111,7 +111,7 @@
       align-items: center;
     }
     .info-box {
-      box-shadow: 0px 1px 17px 1px #d7d7d7;
+      box-shadow: 0px 0px 18px 8px #D5D5D5;
       border-radius: 6px;
       border: 1px solid #e4e4e4;
       padding: 0 15px 15px 15px;
