--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -76,7 +76,7 @@
     .product_title {
       font-size: 20px;
       font-weight: bold;
-      margin: 1rem;
+      margin-top: 1rem;
     }
    
     .old-price {
@@ -96,6 +96,7 @@
     .sub_title,
     .availability {
       font-size: 13px;
+      margin: 1rem;
     }
     .availability {
       color: #71dc71;
