--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -76,7 +76,7 @@
     .product_title {
       font-size: 20px;
       font-weight: bold;
-      margin-top: 1rem;
+      margin: 1rem;
     }
    
     .old-price {
