--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -76,7 +76,8 @@
     .product_title {
       font-size: 20px;
       font-weight: bold;
-      margin: 1.5rem;
+      margin-top: 1.5rem;
+      margin-bottom: 0.5rem;
     }
    
     .old-price {
