--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -97,6 +97,7 @@
     .sub_title,
     .availability {
       font-size: 13px;
+      margin-top: 1rem;
     }
     .availability {
       color: #71dc71;
