--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -100,7 +100,7 @@
       margin-top: 1rem;
     }
     .availability {
-      color: #4db04d;
+      color: #48a648;
       display: flex;
       align-items: center;
     }
@@ -165,7 +165,7 @@
       font-weight: bold;
     }
     .dot {
-      background: #4db04d;
+      background: #48a648;
       width: 10px;
       height: 10px;
       display: block;
