--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -78,6 +78,7 @@
       font-weight: bold;
       margin-top: 1.5rem;
       margin-bottom: 0.5rem;
+      color: #000;
     }
    
     .old-price {
@@ -98,9 +99,10 @@
     .availability {
       font-size: 13px;
       margin-top: 1rem;
+      color: #000;
     }
     .availability {
-      color: #48a648;
+      color: #24A526;
       display: flex;
       align-items: center;
     }
@@ -165,7 +167,7 @@
       font-weight: bold;
     }
     .dot {
-      background: #48a648;
+      background: #24A526;
       width: 10px;
       height: 10px;
       display: block;
