--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -11,7 +11,9 @@
       padding: 0;
       display: flex;
     }
-
+    .swiper-wrapper {
+      margin-top: 7px;
+    }
     .swiper-slide {
       text-align: center;
       font-size: 18px;
