--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -34,7 +34,7 @@
       width: 100%;
       height: 300px;
       margin-left: auto;
-      margin-right: 7px;
+      margin-right: auto;
     }
 
     .swiper-slide {
