--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -4,7 +4,7 @@
       height: 100%;
       max-width: 500px;
       /*margin: 0 20px 0 auto;*/
-      margin: 0 0 0 auto;
+      margin: 0 21px 0 auto;
       font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
       font-size: 14px;
       color: #000;
