--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -154,6 +154,7 @@
       display: flex;
       justify-content: center;
       font-size: 15px;
+      max-width: 1000px;
     }
     .flex {
       display: flex;
