--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -154,6 +154,7 @@
       display: flex;
       justify-content: center;
       font-size: 15px;
+      margin: 0 auto;
       max-width: 1000px;
     }
     .flex {
