--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -318,6 +318,7 @@
       watchSlidesProgress: true,
       spaceBetween: 5,
       centeredSlides: true,
+      disabledClass: 'disabled_swiper_button',
       breakpoints: {
         989: {
           navigation: {
