--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -180,6 +180,11 @@
     .swiper-pagination-bullet-active {
       background: #949494;
     }
+    .disabled_swiper_button {
+        opacity: 0.5;
+        cursor: auto;
+        pointer-events: none;
+    }
     @media only screen and (max-width: 989px) {
       .swiper-pagination {
         position: relative; 
