--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -323,7 +323,6 @@
       watchSlidesProgress: true,
       spaceBetween: 5,
       centeredSlides: true,
-      disabledClass: 'disabled_swiper_button',
       breakpoints: {
         989: {
           navigation: {
@@ -338,7 +337,9 @@
       },
       thumbs: {
         swiper: swiper
-      }
+      },
+
+      disabledClass: 'disabled_swiper_button'
     });
   </script>
 
