--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -339,7 +339,7 @@
         swiper: swiper
       },
 
-      disabledClass: 'disabled_swiper_button'
+      disabledClass: "disabled_swiper_button"
     });
   </script>
 
