--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -152,7 +152,7 @@
     }
     .text-with-icon {
       display: flex;
-      justify-content: center;
+      justify-content: space-around;
       font-size: 15px;
       margin: 0 auto;
       max-width: 1000px;
