--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -320,6 +320,7 @@
     var swiper2 = new Swiper(".mySwiper2", {
       slidesPerView: 1,
       watchSlidesProgress: true,
+      loop: true,
       spaceBetween: 5,
       centeredSlides: true,
       breakpoints: {
