--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -315,12 +315,12 @@
     var swiper = new Swiper(".mySwiper", {
       spaceBetween: 10,
       slidesPerView: 4,
-      watchSlidesProgress: true
+      watchSlidesProgress: true,
+      loop: true
     });
     var swiper2 = new Swiper(".mySwiper2", {
       slidesPerView: 1,
       watchSlidesProgress: true,
-      loop: true,
       spaceBetween: 5,
       centeredSlides: true,
       breakpoints: {
