--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -315,8 +315,7 @@
     var swiper = new Swiper(".mySwiper", {
       spaceBetween: 10,
       slidesPerView: 4,
-      watchSlidesProgress: true,
-      loop: true
+      watchSlidesProgress: true
     });
     var swiper2 = new Swiper(".mySwiper2", {
       slidesPerView: 1,
