--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -119,7 +119,7 @@
     .info-box {
       box-shadow: 0px 0px 21px 10px #ece9e9;
       border-radius: 6px;
-      border: 1px solid #e3e3e3;
+      border: 1px solid #D5D5D5;
       padding: 0 15px 15px 15px;
       width: 400px;
     }
