--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -117,7 +117,7 @@
       align-items: center;
     }
     .info-box {
-      box-shadow: 0px 0px 21px 10px #ece9e9;
+      box-shadow: 0px 0px 21px 10px #ebebeb;
       border-radius: 6px;
       border: 1px solid #D5D5D5;
       padding: 0 15px 15px 15px;
