--- a/sections/test-task.liquid
+++ b/sections/test-task.liquid
@@ -268,11 +268,13 @@
   </div>
   <div class="swiper-pagination medium-large-hide"></div>
 
+  {% assign currency_symbol = shop.money_format | remove: "money" | strip %}
+
   <div class="product-information">
     <div class="info-box">
       <p class="product_title">{{ product.title }}</p>
       <p class="sub_title">{{ product.metafields.product_subtitle.text }}</p>
-      <span class="old-price">{{ product.price | money_with_currency | split: ' ' | reverse | join: ' ' }}</span><span class="new-price-wrapper"><span class="new-price">{{ product.compare_at_price | money_without_currency }} {{ shop.currency }} </span><span class="mws">inkl.MwSt.</span></span>
+      <span class="old-price">{{ product.price | money_without_currency }}{{ currency_symbol }}</span><span class="new-price-wrapper"><span class="new-price">{{ product.compare_at_price | money_without_currency }} {{ shop.currency }} </span><span class="mws">inkl.MwSt.</span></span>
       <div class="availability"><p div class="dot"> </p><p>{{ product.metafields.delivery_time.duration }}</p></div>
       <product-info
       id="ProductInfo-{{ section.id }}"
